# VC-Brain-Hacknation

./: .env.example  .gitignore  .vercelignore  A.md  ARCHITECTURE.md  B.md  C.md  D.md  DEMO.md  Makefile  NOTE-FOR-C.md  README.md  SHARED.md  pyproject.toml  requirements.txt  vercel.json
api/: attest.py  auth.py  index.py  main.py  memo.py  standout.py
app/: README.md  next.config.ts
backtest/: collect.py  fairness.py  runner.py
core/: config.py  llm.py  pipeline.py  search.py  thesis.py  timing.py
data/: sources.json  traits.json
docs/: DIFFERENTIATOR.md  SOURCES.md
intelligence/: banned.py  conformal.py  council.py  custom_council.py  dissent.py  flags.py  gate.py  proof.py  screen.py  team.py  validator.py
memory/: __init__.py  calibration.py  db.py  pg_store.py  profiles.py  queries.py  resolver.py  score.py  score_fallback.py  seed.py  store.py
schema/: _backport.py  events.py  vc.py
scripts/: migrate.py  seed.py  verify_demo.py  warm.py
sourcing/: __init__.py  activate.py  burst.py  bus.py  deck.py  graph.py  linkedin.py  research.py  sanitize.py
tests/: conftest.py  test_api.py  test_attestation_and_asof.py  test_auth.py  test_backtest.py  test_bus_injection.py  test_custom_council.py  test_db_backend.py  test_graph.py  test_identity.py  test_intelligence_conformal.py  test_intelligence_council.py  test_intelligence_d_compat.py  test_intelligence_d_final_compat.py  test_intelligence_dissent.py  test_intelligence_flags.py  test_intelligence_gate.py  test_intelligence_proof.py  test_intelligence_screen.py  test_intelligence_validator.py  (+16 more)
(+82 files in other folders)
